RESOLVED FIXED 234815
[:has() pseudo-class] Style invalidation for :valid and :invalid
https://bugs.webkit.org/show_bug.cgi?id=234815
Summary [:has() pseudo-class] Style invalidation for :valid and :invalid
Antti Koivisto
Reported 2022-01-03 06:16:41 PST
Use PseudoClassChangeInvalidation
Attachments
Patch (25.24 KB, patch)
2022-01-03 08:34 PST, Antti Koivisto
no flags
Antti Koivisto
Comment 1 2022-01-03 08:34:01 PST
Antti Koivisto
Comment 2 2022-01-03 08:34:25 PST
Submitted web-platform-tests pull request: https://github.com/web-platform-tests/wpt/pull/32227
EWS Watchlist
Comment 3 2022-01-03 08:35:04 PST
This patch modifies the imported WPT tests. Please ensure that any changes on the tests (not coming from a WPT import) are exported to WPT. Please see https://trac.webkit.org/wiki/WPTExportProcess
Sam Weinig
Comment 4 2022-01-03 10:08:45 PST
Comment on attachment 448242 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=448242&action=review > Source/WebCore/ChangeLog:8 > + Use PseudoClassChangeInvalidation for accurate and :has() supporting style invalidation. For some reason I am having trouble parsing this sentence.
Antti Koivisto
Comment 5 2022-01-03 10:39:44 PST
> For some reason I am having trouble parsing this sentence. It really isn't a great sentence.
EWS
Comment 6 2022-01-03 10:51:02 PST
Committed r287551 (245686@main): <https://commits.webkit.org/245686@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 448242 [details].
Radar WebKit Bug Importer
Comment 7 2022-01-03 10:52:20 PST
Note You need to log in before you can comment on or make changes to this bug.