[:has() pseudo-class] Style invalidation for :valid and :invalid https://bugs.webkit.org/show_bug.cgi?id=234815

Reviewed by Sam Weinig.

LayoutTests/imported/w3c:

* web-platform-tests/css/selectors/invalidation/has-with-pseudo-class-expected.txt: Renamed from LayoutTests/imported/w3c/web-platform-tests/css/selectors/invalidation/has-pseudo-class-expected.txt.
* web-platform-tests/css/selectors/invalidation/has-with-pseudo-class.html: Renamed from LayoutTests/imported/w3c/web-platform-tests/css/selectors/invalidation/has-pseudo-class.html.

Source/WebCore:

Use PseudoClassChangeInvalidation for accurate and :has() supporting style invalidation.

Test: imported/w3c/web-platform-tests/css/selectors/invalidation/has-with-pseudo-class.html

* html/FormAssociatedElement.cpp:
(WebCore::FormAssociatedElement::computeValidity const):
(WebCore::FormAssociatedElement::isValid const): Deleted.
* html/FormAssociatedElement.h:
* html/HTMLFieldSetElement.cpp:
(WebCore::HTMLFieldSetElement::addInvalidDescendant):
(WebCore::HTMLFieldSetElement::removeInvalidDescendant):
* html/HTMLFormControlElement.cpp:
(WebCore::HTMLFormControlElement::updateWillValidateAndValidity):
(WebCore::HTMLFormControlElement::isValidFormControlElement const):
(WebCore::HTMLFormControlElement::updateValidity):
* html/HTMLFormElement.cpp:
(WebCore::HTMLFormElement::registerInvalidAssociatedFormControl):
(WebCore::HTMLFormElement::removeInvalidAssociatedFormControlIfNeeded):
* html/HTMLInputElement.cpp:
(WebCore::HTMLInputElement::computeValidity const):
(WebCore::HTMLInputElement::isValid const): Deleted.
* html/HTMLInputElement.h:
* html/ValidityState.idl:



Canonical link: https://commits.webkit.org/245686@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@287551 268f45cc-cd09-0410-ab3c-d52691b4dbfc